# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2026 mrv96
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-ltc2959"
description = "CircuitPython module for the LTC2959 ultra-low power battery gas gauge."
version = "0.0.0+auto.0"
readme = "README.rst"
requires-python = ">= 3.9"
authors = [
    {name = "mrv96"}
]
urls = {Homepage = "https://github.com/mrv96/CircuitPython_LTC2959"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "ltc2959",
    "analog",
    "analogdevices",
    "sensor",
    "battery",
    "gauge",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["ltc2959"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
